Fix: Wrap with `overflow: hidden` to remove padding on right

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ a {
   position: absolute !important;
 }
 
+.wrapper {
+  overflow: hidden;
+}
+
 .container {
   height: 100vh;
   position: relative;
